[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/robo.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/robo32.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/startMenu.gd" type="Script" id=3]


[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.498039, 0.54902, 1 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )

[node name="menu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 460.0
margin_bottom = 700.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 40.0
margin_right = 400.0
margin_bottom = 640.0
custom_constants/separation = 90

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/rows"]
margin_right = 360.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 1 )
text = "MENU"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/rows"]
margin_top = 176.0
margin_right = 360.0
margin_bottom = 403.0
custom_constants/separation = 40

[node name="startButton" type="Button" parent="PanelContainer/MarginContainer/rows/VBoxContainer"]
margin_right = 360.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 2 )
text = "Start"

[node name="optionsButton" type="Button" parent="PanelContainer/MarginContainer/rows/VBoxContainer"]
margin_top = 89.0
margin_right = 360.0
margin_bottom = 138.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="quitButton" type="Button" parent="PanelContainer/MarginContainer/rows/VBoxContainer"]
margin_top = 178.0
margin_right = 360.0
margin_bottom = 227.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/rows"]
margin_top = 493.0
margin_right = 360.0
margin_bottom = 583.0

[node name="score" type="Label" parent="PanelContainer/MarginContainer/rows/VBoxContainer2"]
margin_right = 360.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="high_score" type="Label" parent="PanelContainer/MarginContainer/rows/VBoxContainer2"]
margin_top = 47.0
margin_right = 360.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 2 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PanelContainer/MarginContainer/rows/VBoxContainer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/rows/VBoxContainer/quitButton" to="." method="_on_quitButton_pressed"]
